# ssh-microvm

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Justfile  README.md  config.yaml  flake.nix  go.mod  plan.md
.beads/: issues.jsonl  metadata.json
.direnv/: flake-profile-6-link
.dolt/: sql-server.info
.githooks/: pre-commit
cmd/ssh-microvm/: main.go
internal/config/: config.go  config_test.go
internal/firecracker/: firecracker.go  firecracker_test.go
internal/integration/: ssh_vm_test.go
internal/sshserver/: server.go  server_test.go
internal/store/: ids.go  migrations.go  store.go  store_test.go  types.go
internal/util/: ids.go  ids_test.go
src/: api.rs  boot.rs  config.rs  firecracker.rs  lib.rs  lifecycle.rs  main.rs  proxy.rs  ssh_server.rs
tests/: cli.rs  smoke.rs
