[package]
name = "ssh-microvm"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "An SSH server that boots a fresh Firecracker microVM per connection and proxies the session into the guest."
repository = "https://github.com/eduardo/ssh-microvm"
readme = "README.md"
publish = false

[[bin]]
name = "ssh-microvm"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
rand = "0.8"
russh = "0.60"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
